<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>webdir</artifactId>
        <groupId>com.kttdevelopment</groupId>
        <version>1.0.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>webdir-client</artifactId>
    <packaging>jar</packaging>

    <name>WebDir Client</name>

    <url>https://github.com/Ktt-Development/webdir</url>

    <scm>
        <url>https://github.com/Ktt-Development/webdir</url>
        <connection>scm:git:git@github.com:Ktt-Development/webdir.git</connection>
        <developerConnection>scm:git:git@github.com:Ktt-Development/webdir.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <!--
                        <manifest>
                            <mainClass>com.kttdevelopment.rexedia.Main</mainClass>
                        </manifest>
                        -->
                        <manifestEntries>
                            <Built-By>Ktt Development</Built-By>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

            <!-- tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <useFile>false</useFile>
                    <trimStackTrace>false</trimStackTrace>
                    <reuseForks>false</reuseForks>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.kttdevelopment</groupId>
            <artifactId>webdir-api</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.amihaiemil.web</groupId>
            <artifactId>eo-yaml</artifactId>
            <version>5.1.6</version>
        </dependency>

        <!-- tests -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.7.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.7.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>